fix css image rotate overflow

--- a/musidex-web/src/components/player.css
+++ b/musidex-web/src/components/player.css
@@ -77,6 +77,7 @@
 
 .player-current-track-thumbnail {
     display: flex;
+    overflow: hidden;
 }
 
 .player-current-track-thumbnail img {
